# matrixLab

./: CMakeLists.txt  CmakeLists.txt  README.md  crammer.h  docs.cpp  docs.py  driver_implementation.py  eigen.cpp  eigen.h  matrix.cpp  matrix.h  matrixLab.cpp  matrixLab.h  matrixLab_py_driver.py  orthogonalization.cpp  orthogonalization.h  vector.cpp  vector.h
src/: crammer.cpp  eigen.cpp  python_binder.cpp  vector.cpp
unittests/: crammer_test.cpp  eigen_test.cpp  matrix_test.cpp  orthogonalization_test.cpp  vector_test.cpp
